# vala-terminal

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  TODO  autogen.sh  configure.ac
data/: Makefile.am  vala-terminal.desktop  vala-terminal.desktop.in
po/: POTFILES.in  POTFILES.skip
src/: mainwindow.vala  terminal.vala
