AC_INIT([vala-terminal], [1.1.0], [mlauer@vanille-media.de], [vala-terminal])
AC_CONFIG_SRCDIR([Makefile.am])
AC_CONFIG_HEADERS(config.h)
AM_INIT_AUTOMAKE([dist-bzip2])

AC_PROG_CC
AM_PROG_CC_C_O
AC_DISABLE_STATIC
AC_PROG_LIBTOOL

AC_PATH_PROG(VALAC, valac, valac)
AC_SUBST(VALAC)

AH_TEMPLATE([GETTEXT_PACKAGE], [Package name for gettext])
GETTEXT_PACKAGE=vala-terminal
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE")
AC_SUBST(GETTEXT_PACKAGE)
AM_GLIB_GNU_GETTEXT
IT_PROG_INTLTOOL([0.35.0])

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)

GLIB_REQUIRED=2.12.0
GTK_REQUIRED=2.10.0
VTE_REQUIRED=0.16.9

PKG_CHECK_MODULES(VALA_TERMINAL,
  glib-2.0 >= $GLIB_REQUIRED
  gobject-2.0 >= $GLIB_REQUIRED
  gtk+-2.0 >= $GTK_REQUIRED
  vte >= $VTE_REQUIRED)
AC_SUBST(VALA_TERMINAL_CFLAGS)
AC_SUBST(VALA_TERMINAL_LIBS)

AC_CONFIG_FILES([Makefile data/Makefile
	po/Makefile.in])

AC_OUTPUT
