#
# misc. data files
#
# None yet
# dist_pkgdata_DATA = 

#
# desktop integration: .desktop file
#
desktopdir = $(datadir)/applications
dist_desktop_in_files = vala-terminal.desktop.in
dist_desktop_DATA = $(dist_desktop_in_files:.desktop.in=.desktop)
#@INTLTOOL_DESKTOP_RULE@

#
# desktop integration: application icon
#
appicondir = $(datadir)/pixmaps
dist_appicon_DATA = vala-terminal.png

EXTRA_DIST = vala-terminal.desktop.in

